# plutus-tests

./: cabal.project  flake.nix  plutus-tests.cabal
.github/workflows/: integrate.yaml
test/: Spec.hs
